--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "mo-gendiff"
-version = "0.1.0"
+version = "0.2.0"
 description = ""
 authors = ["Max Odinokiy <max.odinokiy@gmail.com>"]
 packages = [
@@ -11,6 +11,7 @@ packages = [
 python = "^3.10"
 
 [tool.poetry.dev-dependencies]
+flake8 = "^5.0.4"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
