--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ packages = [
 
 [tool.poetry.dependencies]
 python = "^3.10"
+pytest-cov = "^3.0.0"
 
 [tool.poetry.dev-dependencies]
 flake8 = "^5.0.4"
