--- a/.github/workflows/.travis.yml
+++ b/.github/workflows/.travis.yml
@@ -1,29 +1,28 @@
-name: Python CI
+name: build
 
-on: push
+on:
+  - push
+  - pull_request
+
 jobs:
-  linter-check:
+  build:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        # we want to test our package on several versions of Python
+        python-version: [3.10]
     steps:
-      - name: checkout repo
-        uses: actions/checkout@v2
+      - uses: actions/checkout@v2
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v2
+        with:
+          python-version: ${{ matrix.python-version }}
+        # make depends on poetry
       - name: Install dependencies
         run: |
           pip install poetry
-          pip install flake8
           make install
-      - name: lint application
-        run: make lint
-
-  tests-check:
-    runs-on: ubuntu-latest
-    steps:
-      - name: checkout repo
-        uses: actions/checkout@v2
-      - name: Install dependencies
+      - name: Run linter and pytest
         run: |
-          pip install poetry
-          pip install pytest
-          make install
-      - name: test application
-        run: make test
+          make test
+          make lint
