--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
 name = "hexlet-code"
-version = "0.4.0"
-description = ""
+version = "1.0.0"
+description = "Two files difference generator"
 authors = ["Max Odinokiy <max.odinokiy@gmail.com>"]
 packages = [
   { include = "gendiff" },
