--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,3 +29,11 @@ jobs:
       - name: Test with pytest
         run: |
           pytest
+      - name: Test & publish code coverage
+        uses: paambaati/codeclimate-action@v2.7.4
+        env:
+          CC_TEST_REPORTER_ID: ${{.env.TEST_COVERAGE}}
+        with:
+          coverageCommand: make test-coverage
+          debug: true
+
