--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,6 +34,6 @@ jobs:
         env:
           CC_TEST_REPORTER_ID: .env.TEST_COVERAGE
         with:
-          coverageCommand: pytest coverage
+          coverageCommand: make test-coverage
           debug: true
 
